[gd_scene load_steps=19 format=2]

[ext_resource path="res://themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/unit_ui.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://textures/unit_profiles/profile_carrot.png" type="Texture" id=4]
[ext_resource path="res://textures/icons/icon_turn_left.png" type="Texture" id=5]
[ext_resource path="res://textures/icons/icon_turn_right.png" type="Texture" id=6]
[ext_resource path="res://textures/icons/icon_bury_unbury.png" type="Texture" id=7]
[ext_resource path="res://textures/icons/icon_center.png" type="Texture" id=8]

[sub_resource type="InputEventAction" id=1]
action = "shortcut_back"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=7]
action = "shortcut_turn_left"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "shortcut_turn_right"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=3]
action = "shortcut_bury_unbury"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "shortcut_center"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="unit_ui" type="Control" groups=[
"unit_ui",
"unit_controls",
]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="p" type="PanelContainer" parent="."]
editor/display_folded = true
margin_left = 8.0
margin_top = 8.0
margin_right = 150.0
margin_bottom = 174.0

[node name="vb" type="VBoxContainer" parent="p"]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 168.0

[node name="hb" type="HBoxContainer" parent="p/vb"]
margin_right = 128.0
margin_bottom = 28.0

[node name="button_close" parent="p/vb/hb" instance=ExtResource( 3 )]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
shortcut = SubResource( 2 )
text = "X"

[node name="unit_name" type="Label" parent="p/vb/hb"]
modulate = Color( 0.376471, 0.376471, 0.376471, 1 )
margin_left = 32.0
margin_top = 5.0
margin_right = 128.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Carrot"
align = 1
uppercase = true

[node name="unit_background" type="ColorRect" parent="p/vb"]
margin_top = 32.0
margin_right = 128.0
margin_bottom = 160.0
rect_min_size = Vector2( 128, 128 )
color = Color( 0.454902, 0.329412, 0.160784, 1 )

[node name="unit_profile" type="TextureRect" parent="p/vb/unit_background"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
rect_clip_content = true
size_flags_horizontal = 5
size_flags_vertical = 5
texture = ExtResource( 4 )
expand = true

[node name="p_2" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -141.0
margin_right = 322.0
margin_bottom = -8.0
grow_vertical = 0

[node name="vb" type="VBoxContainer" parent="p_2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 306.0
margin_bottom = 125.0
custom_constants/separation = 12

[node name="label" type="Label" parent="p_2/vb"]
modulate = Color( 0.376471, 0.376471, 0.376471, 1 )
margin_right = 298.0
margin_bottom = 17.0
text = "Unit controls"
align = 1
uppercase = true

[node name="vb" type="VBoxContainer" parent="p_2/vb"]
margin_top = 29.0
margin_right = 298.0
margin_bottom = 117.0
custom_constants/separation = 8

[node name="hb" type="HBoxContainer" parent="p_2/vb/vb"]
margin_right = 298.0
margin_bottom = 40.0
custom_constants/separation = 8

[node name="button_turn_left" parent="p_2/vb/vb/hb" instance=ExtResource( 3 )]
margin_right = 145.0
margin_bottom = 40.0
rect_min_size = Vector2( 145, 40 )
shortcut = SubResource( 8 )
text = "Turn Left [Q]"
icon = ExtResource( 5 )

[node name="button_turn_right" parent="p_2/vb/vb/hb" instance=ExtResource( 3 )]
margin_left = 153.0
margin_right = 298.0
margin_bottom = 40.0
rect_min_size = Vector2( 145, 40 )
shortcut = SubResource( 10 )
text = "Turn Right [E]"
icon = ExtResource( 6 )

[node name="hb_2" type="HBoxContainer" parent="p_2/vb/vb"]
margin_top = 48.0
margin_right = 298.0
margin_bottom = 88.0
custom_constants/separation = 8

[node name="button_bury_unbury" parent="p_2/vb/vb/hb_2" instance=ExtResource( 3 )]
margin_right = 145.0
margin_bottom = 40.0
rect_min_size = Vector2( 145, 40 )
shortcut = SubResource( 4 )
text = "Unbury [X]"
icon = ExtResource( 7 )

[node name="button_center" parent="p_2/vb/vb/hb_2" instance=ExtResource( 3 )]
margin_left = 153.0
margin_right = 298.0
margin_bottom = 40.0
rect_min_size = Vector2( 145, 40 )
shortcut = SubResource( 6 )
text = "Center [C]"
icon = ExtResource( 8 )
[connection signal="pressed" from="p/vb/hb/button_close" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="p_2/vb/vb/hb/button_turn_left" to="." method="_on_button_turn_left_pressed"]
[connection signal="pressed" from="p_2/vb/vb/hb/button_turn_right" to="." method="_on_button_turn_right_pressed"]
[connection signal="pressed" from="p_2/vb/vb/hb_2/button_bury_unbury" to="." method="_on_button_bury_unbury_pressed"]
[connection signal="pressed" from="p_2/vb/vb/hb_2/button_center" to="." method="_on_button_center_pressed"]
